--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -7,6 +7,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:id="@+id/image_view_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:srcCompat="@android:color/holo_blue_light" />
+    </LinearLayout>
     <TextView
         android:id="@+id/locationName"
         android:layout_width="0dp"
@@ -15,59 +35,27 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Glasgow"
+        android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#2196F3"
         android:textSize="38sp"
-        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/condition"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Mostly Sunny"
-        android:textAlignment="center"
-        android:textColor="#2196F3"
-        android:textSize="27sp"
-        app:layout_constraintBaseline_toBottomOf="@+id/locationName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
-        <TextView
-            android:id="@+id/highest_temp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15sp"/>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="|" android:textSize="15sp"/>
-        <TextView android:id="@+id/lowest_temp" android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:textSize="15sp"/>
-    </LinearLayout>
+
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintTop_toBottomOf="@id/locationName"
+        app:layout_constraintEnd_toEndOf="@id/locationName"
+        app:layout_constraintStart_toStartOf="@id/locationName">
 
         <LinearLayout
             android:layout_width="100dp"
@@ -161,7 +149,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/rain1"
+                android:id="@+id/condition1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:height="30dp"
@@ -216,7 +204,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/rain2"
+                android:id="@+id/condition2"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:height="30dp"
@@ -271,7 +259,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/rain3"
+                android:id="@+id/condition3"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:height="30dp"
@@ -309,14 +297,5 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:srcCompat="@android:color/holo_blue_light" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
