--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Gemma S2030516-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
@@ -40,7 +41,7 @@
         android:textColor="#2196F3"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/table_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +50,7 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/table_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -61,7 +62,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/title_column"
+            >
 
             <TextView
                 android:id="@+id/textView"
@@ -133,7 +136,10 @@
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/current_day"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants">
 
             <TextView
                 android:id="@+id/day1"
@@ -189,7 +195,10 @@
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/tomorrow"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants">
 
             <TextView
                 android:id="@+id/day2"
@@ -244,7 +253,10 @@
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/day_after_tomorrow"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants">
 
             <TextView
                 android:id="@+id/day3"
