--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,18 +47,9 @@
         android:layout_marginBottom="16dp"
         android:spinnerMode="dropdown"
         android:layout_below="@id/txt_label"
-        android:contentDescription="Select a location option from the dropdown menu"
+        android:contentDescription="Select from the dropdown menu"
         />
-    <ListView
-        android:id="@+id/location_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_below="@+id/location_selector"
-        />
+
 
 
        <!-- <ListView
