--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -24,7 +24,26 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select a location to view weather forecast:"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/txt_label"
+            />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/location_selector"
+            android:background="@android:drawable/btn_dropdown"
+            android:layout_marginBottom="16dp"
+            android:spinnerMode="dropdown"
+            android:layout_below="@id/txt_label"
+            android:contentDescription="Select a location option from the dropdown menu"
+            />
 
         <ListView
             android:id="@+id/parsedListView"
