--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,9 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/location_selector"
+        android:padding="15dp" />
 
     <!--<com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
