--- a/app/src/main/res/layout/location_row.xml
+++ b/app/src/main/res/layout/location_row.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--location_row.xml file is used to display the weather homepage to the user. Includes view components such as textviews & image view-->
 <!--Gemma Grant S2030516-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,22 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Weather"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="#2196F3"
-        android:textSize="38sp"
-        android:textStyle="bold"
-         />
 
 
     <LinearLayout
@@ -41,6 +26,7 @@
             android:id="@+id/info"
             android:layout_weight="33.3"
             >
+
             <TextView
                 android:id="@+id/location_name"
                 android:layout_width="match_parent"
@@ -50,21 +36,9 @@
                 android:paddingTop="5dp"
                 android:paddingRight="5dp"
                 android:text="My Location "
-                android:textSize="16dp"
+                android:textSize="26dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/current_time"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-
-                android:paddingLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp"
-                android:text="20:42"
-                android:textSize="9dp"
-                app:layout_constraintBottom_toBottomOf="@id/location_name"
-                 />
 
             <TextView
                 android:id="@+id/condition"
@@ -73,11 +47,10 @@
                 android:paddingLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingRight="5dp"
-                android:text="Condition"
-                android:textSize="10dp"
-                app:layout_constraintBottom_toBottomOf="@id/current_time"
                 android:paddingBottom="5dp"
-                />
+                android:text="Condition"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toBottomOf="@id/location_name" />
     </LinearLayout>
         <LinearLayout
             android:layout_width="100dp"
@@ -86,28 +59,35 @@
             android:id="@+id/temperatures"
             android:layout_weight="66.6"
             >
+
             <ImageView
+                android:id="@+id/image_condition"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="60dp"
+                android:src="@drawable/day_clear"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/min_temp"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:paddingLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp" />
 
-            <TextView
-                android:id="@+id/max_temp"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:paddingLeft="5dp"
-                android:paddingTop="5dp"
-                android:paddingRight="5dp" />
+                <TextView
+                    android:id="@+id/min_temp"
+                    android:layout_width="86dp"
+                    android:layout_height="30dp"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_below="@id/image_condition"/>
+
+                <TextView
+                    android:id="@+id/max_temp"
+                    android:layout_width="91dp"
+                    android:layout_height="30dp"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="5dp"
+                    android:layout_below="@id/image_condition"/>
             </LinearLayout>
 
         </LinearLayout>
