--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Gemma S2030516-->
+<!-- This is the portrait fragment that displays a list of the details about a particular location's weather forecast.
+     This xml file is comprised of several LinearLayouts and TextViews to show the details.
+     Created by Gemma Grant s2030516 on 22/08/2022
+-->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
