--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -62,6 +62,9 @@
         app:layout_constraintEnd_toEndOf="@id/locationName"
         app:layout_constraintStart_toStartOf="@id/locationName">
 
+
+
+
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -132,10 +135,100 @@
                 android:paddingLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingRight="5dp"
-                android:text="Wind"
+                android:text="Wind Speed"
                 android:textAllCaps="true"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:text="Wind Direction"
+                android:textAllCaps="true"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView7"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:text="Visibility"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textSize="14dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView8"
+                android:text="Pressure"
+                android:height="30dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:textAllCaps="true"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView9"
+                android:text="Humidity"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:height="30dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:text="UV Risk"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:height="30dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView11"
+                android:text="Pollution"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:height="30dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:text="Sunrise"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:height="30dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sunset"
+                android:id="@+id/textView13"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:height="30dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -169,7 +262,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/temp1"
+                android:id="@+id/min_temp1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -178,7 +271,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/maxTemp1"
+                android:id="@+id/max_temp1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -187,14 +280,78 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/windspeed1"
+                android:id="@+id/wind_speed1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingRight="5dp" />
+            <TextView
+                android:id="@+id/wind_direction1"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/visibility1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pressure1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/humidity1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/uv_risk1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pollution1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sunrise1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sunset1"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -203,7 +360,7 @@
             android:orientation="vertical"
             android:id="@+id/tomorrow"
             android:clickable="true"
-            android:descendantFocusability="blocksDescendants">
+           >
 
             <TextView
                 android:id="@+id/day2"
@@ -227,7 +384,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/temp2"
+                android:id="@+id/min_temp2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -236,7 +393,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/maxTemp2"
+                android:id="@+id/max_temp2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -245,7 +402,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/windspeed2"
+                android:id="@+id/wind_speed2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -253,6 +410,71 @@
                 android:paddingTop="5dp"
                 android:paddingRight="5dp" />
 
+            <TextView
+                android:id="@+id/wind_direction2"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/visibility2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pressure2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/humidity2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/uv_risk2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pollution2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sunrise2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sunset2"
+                android:height="30dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -285,7 +507,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/temp3"
+                android:id="@+id/min_temp3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -294,7 +516,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/maxTemp3"
+                android:id="@+id/max_temp3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -303,7 +525,7 @@
                 android:paddingRight="5dp" />
 
             <TextView
-                android:id="@+id/windspeed3"
+                android:id="@+id/wind_speed3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:height="30dp"
@@ -311,7 +533,79 @@
                 android:paddingTop="5dp"
                 android:paddingRight="5dp" />
 
+            <TextView
+                android:id="@+id/wind_direction3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/visibility3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/pressure3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/humidity3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/uv_risk3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/pollution3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/sunrise3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
+
+            <TextView
+                android:id="@+id/sunset3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:height="30dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="5dp"
+                android:paddingRight="5dp" />
         </LinearLayout>
+
     </LinearLayout>
 
 
