--- a/app/src/main/res/layout/location_row.xml
+++ b/app/src/main/res/layout/location_row.xml
@@ -8,7 +8,8 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
     <LinearLayout
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:weightSum="100"
         android:orientation="horizontal"
+
         >
 
         <LinearLayout
@@ -35,9 +37,11 @@
                 android:paddingLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingRight="5dp"
+                android:paddingBottom="5dp"
                 android:text="My Location "
                 android:textSize="26dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
 
             <TextView
@@ -47,9 +51,10 @@
                 android:paddingLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingRight="5dp"
-                android:paddingBottom="5dp"
+                android:paddingBottom="3dp"
                 android:text="Condition"
-                android:textSize="18dp"
+                android:textSize="18sp"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@id/location_name" />
     </LinearLayout>
         <LinearLayout
@@ -78,6 +83,8 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:paddingRight="5dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
                     android:layout_below="@id/image_condition"/>
 
                 <TextView
@@ -87,6 +94,8 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:paddingRight="5dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
                     android:layout_below="@id/image_condition"/>
             </LinearLayout>
 
